--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="#" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>
+      Amazon Xtreme Fishing | Peacock Bass Sport Fishing in Brazil’s Amazon
+    </title>
+    <meta
+      name="description"
+      content="Target the mighty Peacock Bass with Amazon Xtreme Fishing! Explore the Amazon’s pristine waters for an unforgettable sport fishing adventure. Book your trip now and reel in the catch of a lifetime!"
+    />
   </head>
   <body>
     <div id="root"></div>
