--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       name="description"
       content="Target the mighty Peacock Bass with Amazon Xtreme Fishing! Explore the Amazon’s pristine waters for an unforgettable sport fishing adventure. Book your trip now and reel in the catch of a lifetime!"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
